--- a/app/src/main/res/layout/animal_row.xml
+++ b/app/src/main/res/layout/animal_row.xml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="8dp"
-    app:cardCornerRadius="9dp"
-    android:layout_margin="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_margin="10dp">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        app:cardCornerRadius="9dp">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="85dp"
-            android:layout_height="75dp"
-            android:elevation="5dp"
-            app:cardCornerRadius="9dp">
-
-            <ImageView
-            android:id="@+id/img_animal"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="85dp"
+                android:layout_height="75dp"
+                android:elevation="5dp"
+                app:cardCornerRadius="9dp">
+
+                <ImageView
+                    android:id="@+id/img_animal"
+                    android:layout_width="match_parent"
+                    android:scaleType="centerCrop"
+                    android:layout_height="match_parent"/>
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/txt_animal_name"
-                android:layout_width="90dp"
+                android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="150dp"
-                android:fontFamily="casual"
+                android:layout_marginStart="10dp"
                 android:text="Text"
                 android:textColor="@android:color/white"
-                android:textSize="22sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:visibility="visible" />
-
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
